diesel_compile_tests/tests/fail/copy_can_only_use_options_with_raw_variant.stderr
error[E0599]: no method named `with_format` found for struct `CopyFromQuery<users::table, pg::query_builder::copy::copy_from::InsertableWrapper<Vec<NewUser>>>` in the current scope
  --> tests/fail/copy_can_only_use_options_with_raw_variant.rs:49:10
   |
47 |       diesel::copy_from(users::table)
   |       -------------------------------
   |       |
   |  _____method `with_format` is available on `CopyFromQuery<users::table, pg::query_builder::copy::copy_from::NotSet>`
   | |
48 | |         .from_insertable(vec![NewUser { name: "John" }])
49 | |         .with_format(CopyFormat::Csv)
   | |         -^^^^^^^^^^^ method not found in `CopyFromQuery<table, InsertableWrapper<Vec<NewUser>>>`
   | |_________|
   |
   |
   = note: the method was found for
           - `CopyFromQuery<T, pg::query_builder::copy::copy_from::CopyFrom<C, F>>`

error[E0599]: the method `load` exists for struct `CopyToQuery<table, CopyToOptions>`, but its trait bounds were not satisfied
  --> tests/fail/copy_can_only_use_options_with_raw_variant.rs:55:10
   |
53 | /     diesel::copy_to(users::table)
54 | |         .with_format(CopyFormat::Csv)
55 | |         .load::<User, _>(conn)
   | |_________-^^^^
   |
  ::: $DIESEL/src/pg/query_builder/copy/copy_to.rs
   |
   |   pub struct CopyToQuery<T, O> {
   |   ---------------------------- doesn't satisfy `_: RunQueryDsl<_>` or `_: View`
   |
   = note: the following trait bounds were not satisfied:
           `CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: View`
           which is required by `CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: diesel::RunQueryDsl<_>`
           `&CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: View`
           which is required by `&CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: diesel::RunQueryDsl<_>`
           `&mut CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: View`
           which is required by `&mut CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: diesel::RunQueryDsl<_>`
